メッセージページ作成お知らせボタンの修正まだ

--- a/html/company-info.html
+++ b/html/company-info.html
@@ -317,7 +317,6 @@
 
                 <!-- メインコンテンツ -->
                 <article id="conts">
-                    <!-- フラッシュメッセージ -->
 
 <!-- アプローチされている場合 -->
         <!-- オファー未承認 -->
@@ -365,7 +364,7 @@
                 </div>
             </div>
         
-            <!-- お気に入り登録されている 　※非表示-->
+            <!-- お気に入り登録されている 　-->
             <div class="fixBox">
                 <div class="comLinkBox02 boxStyle02 ">
                     <div class="leftBox">
