--- a/html/company-offer-favorite.html
+++ b/html/company-offer-favorite.html
@@ -356,7 +356,7 @@
 							<p>Metsukete株式会社</p>
 							<p class="sml">広告・マスコミ業界</p>
 						</a>
-						<p class="ttl phone"><a class="phone-text" href="http://dev.metsukete.jp/student/company/messages/3" ><span class="txt">株式会社サンプルがお気に入りに登録しました</span></a></p>
+						<p class="ttl phone"><a class="phone-text" href="http://dev.metsukete.jp/student/company/messages/3" ><span>株式会社サンプルがお気に入りに登録しました</span></a></p>
 					</div>
 					<div class="status-wrapper">
 						<p class="time phone">2023-10-27 10:43</p>
@@ -395,7 +395,7 @@
 							<p>Metsukete株式会社</p>
 							<p class="sml">広告・マスコミ業界</p>
 						</a>
-						<p class="ttl phone"><a class="phone-text" href="http://dev.metsukete.jp/student/company/messages/3" ><span class="txt">株式会社サンプルがお気に入りに登録しました</span></a></p>
+						<p class="ttl phone"><a class="phone-text" href="http://dev.metsukete.jp/student/company/messages/3" ><span>株式会社サンプルがお気に入りに登録しました</span></a></p>
 					</div>
 					<div class="status-wrapper">
 						<p class="time phone">2023-10-27 10:43</p>
@@ -434,7 +434,7 @@
 							<p>Metsukete株式会社</p>
 							<p class="sml">広告・マスコミ業界</p>
 						</a>
-						<p class="ttl phone"><a class="phone-text" href="http://dev.metsukete.jp/student/company/messages/3" ><span class="txt">株式会社サンプルがお気に入りに登録しました</span></a></p>
+						<p class="ttl phone"><a class="phone-text" href="http://dev.metsukete.jp/student/company/messages/3" ><span>株式会社サンプルがお気に入りに登録しました</span></a></p>
 					</div>
 					<div class="status-wrapper">
 						<p class="time phone">2023-10-27 10:43</p>
@@ -473,7 +473,7 @@
                                 <p>Metsukete株式会社</p>
                                 <p class="sml">広告・マスコミ業界</p>
                             </a>
-                            <p class="ttl phone"><a class="phone-text" href="http://dev.metsukete.jp/student/company/messages/3" ><span class="txt">株式会社サンプルがお気に入りに登録しました</span></a></p>
+                            <p class="ttl phone"><a class="phone-text" href="http://dev.metsukete.jp/student/company/messages/3" ><span>株式会社サンプルがお気に入りに登録しました</span></a></p>
                         </div>
                         <div class="status-wrapper">
                             <p class="time phone">2023-10-27 10:43</p>
@@ -512,7 +512,7 @@
                                 <p>Metsukete株式会社</p>
                                 <p class="sml">広告・マスコミ業界</p>
                             </a>
-                            <p class="ttl phone"><a class="phone-text" href="http://dev.metsukete.jp/student/company/messages/3" ><span class="txt">株式会社サンプルがお気に入りに登録しました</span></a></p>
+                            <p class="ttl phone"><a class="phone-text" href="http://dev.metsukete.jp/student/company/messages/3" ><span>株式会社サンプルがお気に入りに登録しました</span></a></p>
                         </div>
                         <div class="status-wrapper">
                             <p class="time phone">2023-10-27 10:43</p>
@@ -552,7 +552,7 @@
                                 <p>MetsuketeMetsukete株式会社</p>
                                 <p class="sml">広告・建築アート・マスコミ業界</p>
                             </a>
-                            <p class="ttl phone"><a class="phone-text" href="http://dev.metsukete.jp/student/company/messages/3" ><span class="txt">株式会社サンプル株式会社サンプルがお気に入りに登録しました</span></a></p>
+                            <p class="ttl phone"><a class="phone-text" href="http://dev.metsukete.jp/student/company/messages/3" ><span>株式会社サンプル株式会社サンプルがお気に入りに登録しました</span></a></p>
                         </div>
                         <div class="status-wrapper">
                             <p class="time phone">2023-10-27 10:43</p>
